--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="col">
                 <div class="app-card h-100 p-4 position-relative">
                     <div class="featured-badge">Empfohlen</div>
-                    <img src="apps/calculator/icon.png" class="app-icon mb-3">
+                    <img src="assets/img/calculator.png" class="app-icon mb-3">
                     <h3>Nexus Rechner</h3>
                     <p class="text-muted">Modernster Taschenrechner mit Dark Mode und erweiterten Funktionen</p>
                     <div class="mt-auto">
@@ -127,7 +127,7 @@
 
         <!-- Footer -->
         <footer class="text-center mt-5 py-4 text-muted">
-            <p>© 2024 NexusStore - DSGVO-konform • Made in EU</p>
+            <p>© 2025 NexusStore - DSGVO-konform • Made in EU</p>
             <div class="social-links">
                 <a href="#" class="text-light me-3"><i class="fab fa-twitter"></i></a>
                 <a href="#" class="text-light me-3"><i class="fab fa-github"></i></a>
